--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-node_modules/   表示过滤这个文件夹
-*.zip   过滤zip后缀文件
+# testing
+/coverage
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.idea/
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
