--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "css-loader": "^3.5.3",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "node-sass": "^4.14.1",
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "sass-loader": "^8.0.2",
     "simplex-noise": "^2.4.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
