--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "sass-loader": "^8.0.2",
     "simplex-noise": "^2.4.0",
     "style-loader": "^1.2.1",
