--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "sass-loader": "^8.0.2",
+    "sass-resources-loader": "^2.0.3",
     "simplex-noise": "^2.4.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
